force-app/main/default/objects/Chat__c/Chat__c.object-meta.xml
<CustomObject>
    <description>Stores a conversation relating to a given record with the system</description>
    <label>Chat</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Chat No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>