force-app/main/default/objects/Chat__c/fields/Context_Child__c.field-meta.xml
<CustomField>
    <fullName>Context_Child__c</fullName>
    <externalId>true</externalId>
    <label>Context Child</label>
    <length>18</length>
    <type>Text</type>
</CustomField>