force-app/main/default/objects/Chat__c/fields/First_Message__c.field-meta.xml
<CustomField>
    <fullName>First_Message__c</fullName>
    <label>First Message</label>
    <type>DateTime</type>
</CustomField>