force-app/main/default/objects/Chat__c/fields/Last_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Message__c</fullName>
    <inlineHelpText>The datetime the last message on this chat record was sent</inlineHelpText>
    <label>Last Message</label>
    <type>DateTime</type>
</CustomField>