force-app/main/default/objects/Chat__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>Json formatted messages from the chat</description>
    <label>Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>