force-app/main/default/objects/Chat__c/fields/Previous_Chat__c.field-meta.xml
<CustomField>
    <fullName>Previous_Chat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Chat</label>
    <referenceTo>Chat__c</referenceTo>
    <relationshipLabel>Next Chat</relationshipLabel>
    <relationshipName>Previous_Chat</relationshipName>
    <type>Lookup</type>
</CustomField>