force-app/main/default/objects/Chat__c/fields/Read_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Read_Receipts__c</fullName>
    <label>Read Receipts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>